# relational-rag

./: .env.example  .gitignore  README.md  pyproject.toml
data/: sales.duckdb
notebooks/: 01-setup.ipynb  02-rag.ipynb
