[project]
name = "relational-rag"
version = "0.1.0"
description = "CLI natural-language interface for querying DuckDB using RAG-grounded SQL generation"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "duckdb>=1.5.2",
    "jupyter>=1.0.0",
    "minsearch>=0.0.5",
    "openai>=1.50.0",
    "python-dotenv>=1.0.0",
]
